manifests/10-preemption-test-foundation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kueue-preemption-test
  labels:
    kueue.openshift.io/managed: "true"
    app.kubernetes.io/part-of: kueue-preemption-test
