manifests/kueueviz-v0.19.4.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: kueue
  name: kueue-kueueviz-backend
  namespace: kueue-system
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: kueueviz-backend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: kueue
  name: kueue-kueueviz-frontend
  namespace: kueue-system
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: kueueviz-frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: kueue
  name: kueue-kueueviz-backend
  namespace: kueue-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kueueviz-backend
  template:
    metadata:
      labels:
        app: kueueviz-backend
    spec:
      containers:
      - image: registry.k8s.io/kueue/kueueviz-backend:v0.19.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        name: backend
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: kueue
  name: kueue-kueueviz-frontend
  namespace: kueue-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kueueviz-frontend
  template:
    metadata:
      labels:
        app: kueueviz-frontend
    spec:
      containers:
      - image: registry.k8s.io/kueue/kueueviz-frontend:v0.19.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        name: frontend
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /app/build/env.js
          name: env-config
          readOnly: true
          subPath: env.js
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - configMap:
          name: kueue-kueueviz-frontend-env-cdhtfc8hgg
        name: env-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: kueue
  name: kueue-kueueviz-backend-ingress
  namespace: kueue-system
spec:
  rules:
  - host: backend.kueueviz.local
    http:
      paths:
      - backend:
          service:
            name: kueue-kueueviz-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - backend.kueueviz.local
    secretName: kueueviz-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: kueue
  name: kueue-kueueviz-frontend-ingress
  namespace: kueue-system
spec:
  rules:
  - host: frontend.kueueviz.local
    http:
      paths:
      - backend:
          service:
            name: kueue-kueueviz-frontend
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - frontend.kueueviz.local
    secretName: kueueviz-tls-secret
